[tool.poetry]
name = "decouple-types"
version = "1.0.0"
description = ""
authors = ["Danthewaann <danielcrblack@gmail.com>"]
readme = "README.md"

packages = [
    { include = "decouple.pyi", from = "." },
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
